# asdf-astropy

./: .coveralls.yml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CITATION  MANIFEST.in  README.rst  bandit.yaml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: asdf_astropy_ci.yml  changelog.yml  ci.yml  compare_asdf_support.yml  downstream.yml  publish-to-pypi.yml
asdf_astropy/: __init__.py  _astropy_init.py  _manifest.py  conftest.py  exceptions.py  extension.py  extensions.py  integration.py  types.py
asdf_astropy/converters/: __init__.py  helpers.py  utils.py
asdf_astropy/converters/coordinates/: __init__.py  angle.py  earth_location.py  frame.py  representation.py  sky_coord.py  spectral_coord.py
asdf_astropy/converters/coordinates/tests/: helpers.py  test_angle.py  test_earth_location.py  test_frame.py  test_masked.py  test_representation.py  test_sky_coord.py  test_spectral_coord.py
asdf_astropy/converters/cosmology/: cosmology.py
asdf_astropy/converters/cosmology/tests/: test_cosmology.py
asdf_astropy/converters/fits/: __init__.py  fits.py  fitswcs.py
asdf_astropy/converters/fits/tests/: test_fits.py  test_fitswcs.py
asdf_astropy/converters/nddata/: __init__.py  uncertainty.py
asdf_astropy/converters/nddata/tests/: test_uncertainty.py
asdf_astropy/converters/slicedwcs/: __init__.py  slicedwcs.py
asdf_astropy/converters/slicedwcs/test/: test_slicedwcs.py
asdf_astropy/converters/table/: __init__.py  table.py
asdf_astropy/converters/table/tests/: test_table.py
asdf_astropy/converters/tests/: test_utils.py
asdf_astropy/converters/time/: __init__.py  time.py  time_delta.py
asdf_astropy/converters/time/tests/: test_time.py  test_time_delta.py
asdf_astropy/converters/transform/: __init__.py  compound.py  core.py  functional_models.py  mappings.py  math_functions.py  polynomial.py  projections.py  properties.py  rotations.py  spline.py  tabular.py
asdf_astropy/converters/transform/tests/: test_transform.py
asdf_astropy/converters/uncertainty/: __init__.py  uncertainty.py
asdf_astropy/converters/uncertainty/tests/: test_uncertainty.py
asdf_astropy/converters/unit/: __init__.py  equivalency.py  magunit.py  quantity.py  unit.py
asdf_astropy/converters/unit/tests/: test_equivalency.py  test_magunit.py  test_masked.py  test_masked_not_implemented.py  test_quantity.py  test_unit.py
asdf_astropy/converters/unit/tests/resources/: test.asdf
asdf_astropy/converters/wcs/: __init__.py  fitswcs.py  highlevelwrapper.py  slicedwcs.py  wcs.py
asdf_astropy/converters/wcs/tests/: conftest.py  test_fitswcs.py  test_highlevelwcswrapper.py  test_slicedwcs.py  test_wcs.py
asdf_astropy/io/: connect.py
asdf_astropy/io/tests/: test_io.py
asdf_astropy/resources/manifests/: astropy-1.0.0.yaml  astropy-1.0.yaml  astropy-1.1.0.yaml  astropy-1.2.0.yaml  astropy-1.3.0.yaml  astropy-1.4.0.yaml  astropy-1.5.0.yaml  astropy-1.6.0.yaml  units-1.0.0.yaml  units-1.1.0.yaml  units-1.2.0.yaml  units-1.3.0.yaml
asdf_astropy/resources/schemas/coordinates/: angle-1.0.0.yaml  earthlocation-1.0.0.yaml  latitude-1.0.0.yaml  longitude-1.0.0.yaml  representation-1.0.0.yaml
asdf_astropy/resources/schemas/coordinates/frames/: cirs-1.0.0.yaml  fk4-1.0.0.yaml  fk4noeterms-1.0.0.yaml  fk5-1.0.0.yaml  galactocentric-1.0.0.yaml  gcrs-1.0.0.yaml  icrs-1.0.0.yaml  itrs-1.0.0.yaml  precessedgeocentric-1.0.0.yaml
asdf_astropy/resources/schemas/cosmology/: basecosmology-1.0.0.yaml  baseflrw-1.0.0.yaml  flatlambdacdm-1.0.0.yaml  flatw0wacdm-1.0.0.yaml  flatwcdm-1.0.0.yaml  flatwpwacdm-1.0.0.yaml  lambdacdm-1.0.0.yaml  w0wacdm-1.0.0.yaml  w0wzcdm-1.0.0.yaml  wcdm-1.0.0.yaml  wpwacdm-1.0.0.yaml
asdf_astropy/resources/schemas/fits/: fits-1.0.0.yaml  fits-1.1.0.yaml  fits-1.2.0.yaml  fitswcs-1.0.0.yaml
asdf_astropy/resources/schemas/nddata/: stddevuncertainty-1.0.0.yaml  uncertainty-1.0.0.yaml  unknownuncertainty-1.0.0.yaml  varianceuncertainty-1.0.0.yaml
asdf_astropy/resources/schemas/slicedwcs/: slicedwcs-1.0.0.yaml
asdf_astropy/resources/schemas/table/: ndarraymixin-1.0.0.yaml  table-1.0.0.yaml  table-1.1.0.yaml  table-1.2.0.yaml  table-1.3.0.yaml
asdf_astropy/resources/schemas/time/: timedelta-1.0.0.yaml  timedelta-1.2.0.yaml
asdf_astropy/resources/schemas/transform/: units_mapping-1.0.0.yaml  units_mapping-1.2.0.yaml
asdf_astropy/resources/schemas/uncertainty/: stddevuncertainty-1.0.0.yaml  uncertainty-1.0.0.yaml  unknownuncertainty-1.0.0.yaml
asdf_astropy/resources/schemas/units/: equivalency-1.0.0.yaml  equivalency-1.1.0.yaml  equivalency-1.2.0.yaml  magunit-1.0.0.yaml  magunit-1.1.0.yaml
asdf_astropy/resources/schemas/wcs/: highlevelwcswrapper-1.0.0.yaml  slicedwcs-1.0.0.yaml  slicedwcs-1.1.0.yaml  wcs-1.0.0.yaml
asdf_astropy/tags/transform/: basic.py  compound.py  functional_models.py  math.py  physical_models.py  polynomial.py  powerlaws.py  projections.py  tabular.py
asdf_astropy/tags/transform/tests/: __init__.py  test_transform.py  test_units_mapping.py
asdf_astropy/testing/: helpers.py
asdf_astropy/tests/: __init__.py  test_integration.py  versions.py
docs/: conf.py  index.rst
docs/asdf-astropy/: api.rst  details.rst  example.rst  index.rst  install.rst  manifest.rst  migrating.rst  quickstart.rst  schemas.rst  table.rst
docs/asdf-astropy/developer_docs/: api.rst  example.rst  index.rst
licenses/: LICENSE.rst
scripts/: generate_manifest.py
