[metadata]
name = asdf_astropy
author = The ASDF dev team
author_email =
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs/astropy.org/projects/asdf-astropy
description = Astropy Converters for ASDF
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/asdf-astropy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy @ git+https://github.com/astropy/astropy#egg=astropy
    asdf @ git+https://github.com/asdf-format/asdf@asdf-standard-2.0.0-epic
    numpy
    asdf-transform-schemas @ git+https://github.com/asdf-format/asdf-transform-schemas#egg=asdf_transform_schemas

[options.entry_points]
asdf.converter_providers =
  asdf-astropy = asdf_astropy.extension:TransformConverterProvider

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
asdf-astropy = data/*

[tool:pytest]
testpaths = "asdf-astropy" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    asdf-astropy/_astropy_init*
    asdf-astropy/conftest.py
    asdf-astropy/*setup_package*
    asdf-astropy/tests/*
    asdf-astropy/*/tests/*
    asdf-astropy/extern/*
    asdf-astropy/version*
    */asdf-astropy/_astropy_init*
    */asdf-astropy/conftest.py
    */asdf-astropy/*setup_package*
    */asdf-astropy/tests/*
    */asdf-astropy/*/tests/*
    */asdf-astropy/extern/*
    */asdf-astropy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
